--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
         <div>
-            <h3 class="float-md-start mb-0">Data Science</h3>
+            <h3 class="float-md-start mb-0">Data Science Project</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
                 <a class="nav-link" href="/predict">Predictions</a>
@@ -50,7 +50,7 @@
     </header>
 
     <main class="px-3">
-        <h1>Water Quality</h1>
+        <h1>Water Quality.</h1>
         <p class="lead">Prediction of water quality according to the indicated parameters.</p>
         <form action="predict" method="POST" enctype="multipart/form-data">
             <div class="mb-3">
