--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
     </header>
 
     <main class="px-3">
-        <h1>Water Quality</h1>
+        <h1>Water Quality.</h1>
         <p class="lead">Prediction of water quality according to the indicated parameters.</p>
         <form action="predict" method="POST" enctype="multipart/form-data">
             <div class="mb-3">
