--- a/static/cover.css
+++ b/static/cover.css
@@ -37,6 +37,7 @@ body {
   font-weight: 700;
   color: rgba(255, 255, 255, .5);
   background-color: transparent;
+  background-image: url('../img/fondofoto.png');
   border-bottom: .25rem solid transparent;
 }
 
