--- a/static/cover.css
+++ b/static/cover.css
@@ -19,13 +19,18 @@
 body {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-  background-image: url(../img/fondofoto.png);
   
 }
 
+.fondo{
+  margin: 0;
+  background-image: url('../img/fondofoto.png');
+
+  }
+
 .cover-container {
   max-width: 42em;
-  background-image: url(../img/fondofoto.png);
+  
 }
 
 
@@ -38,7 +43,6 @@ body {
   font-weight: 700;
   color: rgba(255, 255, 255, .5);
   background-color: transparent;
-  background-image: url(../img/fondofoto.png);
   border-bottom: .25rem solid transparent;
 }
 
