--- a/templates/index.html
+++ b/templates/index.html
@@ -39,9 +39,9 @@
     <link href="static/cover.css" rel="stylesheet">
     
 </head>
-<body class="d-flex h-100 text-center text-white fondo">
+<body class="fondo d-flex h-100 text-center text-white">
 <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script> 
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+<div class="fondo cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
         <div>
             <h3 class="float-md-start mb-0">Data Science Project</h3>
