--- a/static/cover.css
+++ b/static/cover.css
@@ -21,7 +21,9 @@ body {
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
   
 }
-
+.image{
+  background-image: url(../img/fondofoto.png);
+}
 .cover-container {
   max-width: 42em;
   
