--- a/static/cover.css
+++ b/static/cover.css
@@ -22,7 +22,7 @@ body {
   
 }
 .image{
-  background-image: url(../img/fondofoto.png);
+  background-image: url(./img/fondofoto.png)
 }
 .cover-container {
   max-width: 42em;
