--- a/static/cover.css
+++ b/static/cover.css
@@ -22,8 +22,10 @@ body {
   
 }
 .image{
-  background-image: url(./img/fondofoto.png)
+  background-image: url(./img/fondofoto.png);
+  background-repeat: no-repeat;
 }
+
 .cover-container {
   max-width: 42em;
   
