--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
 <body class="d-flex h-100 text-center text-white image">
 <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script> 
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <header class="mb-auto mb-dark">
+    <header class="mb-auto mb-0">
         <div>
             <h3 class="float-md-start mb-0">Data Science Project</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
@@ -70,7 +70,7 @@
 
     </main>
 
-    <footer class="mt-auto text-white-50 mb-dark">
+    <footer class="mt-auto text-white-50 mb-0">
         <p>Project created by Maria Carla González. <a href="https://github.com/mcarlagg17/TBDS_ML_Clf_WaterQuality_flask"><i class="fa fa-github"></i> </a></p>
     </footer>
 </div>
