--- a/templates/predict.html
+++ b/templates/predict.html
@@ -36,7 +36,7 @@
     <!-- Custom styles for this template -->
     <link href="static/cover.css" rel="stylesheet">
 </head>
-<body class="d-flex h-100 text-center text-white bg-dark">
+<body class="d-flex h-100 text-center text-white bg-dark image">
 
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
