--- a/templates/predict.html
+++ b/templates/predict.html
@@ -50,7 +50,7 @@
         </div>
     </header>
 
-    <main class="px-3">
+    <main class="px-3 bg-dark">
         {% if resultado==1 %}
             <h1>Water is safe</h1>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS985oY4pv59yJKPwvqnRvrBTU1vDZM0kCpVA&usqp=CAU">
