--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
         <p class="lead">Prediction of water quality according to the indicated parameters.</p>
         <form action="predict" method="POST" enctype="multipart/form-data">
                
-            <div class="file-upload">
+            <div class="file-upload text-center">
                 <div class="file-select">
                     <div class="file-select-button" id="fileName">Choose File</div>
                     <div class="file-select-name" id="noFile">No file chosen...</div> 
