--- a/templates/predict_table.html
+++ b/templates/predict_table.html
@@ -39,7 +39,7 @@
 <body class="d-flex h-100 text-center text-white bg-dark">
 
 <div class="cover-container d-flex w-200 h-100 p-3 mx-auto flex-column">
-    <header class="mb-auto">
+    <header class="mb-auto w-h">
         <div>
             <h3 class="float-md-start mb-0">Data Science Project</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
