--- a/templates/params.html
+++ b/templates/params.html
@@ -47,18 +47,18 @@
             <h3 class="float-md-start mb-0">Data Science Project</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link" href="/">Home</a>
-                <a class="nav-link active" aria-current="page" href="/params">Params</a>
+                <a class="nav-link active" aria-current="page" href="/params">Parameters</a>
                 <a class="nav-link" href="#">Contact</a>
             </nav>
         </div>
     </header>
 
     <main class="px-3">
-        <h1>Parameters.</h1>
+        
         <form action="predict" method="POST" enctype="multipart/form-data">
-               
+            <h1>Parameters.</h1>  
             <div>
-                <img src="../static/img/params.png" width="960" height="640" />
+                <img src="../static/img/params.png" width="1300" height="900" />
             </div>
             <p class="lead"><br></p>
 
