--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
             <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Run prediction</button>
         </form>
         <p class="lead">
-            <a href="/params" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Parametes to add</a>
+            <a href="/params" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Parameters to add</a>
         </p>
 
     </main>
