--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,7 @@
             <h3 class="float-md-start mb-0">Data Science Project</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link" href="/params">Parameters</a>
                 <a class="nav-link" href="#">Contact</a>
             </nav>
         </div>
@@ -67,10 +68,11 @@
             </div>
             <p class="lead"><br></p>
             <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Run prediction</button>
+            <p class="lead">
+                <a href="/params" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Parameters to add</a>
+            </p>
         </form>
-        <p class="lead">
-            <a href="/params" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Parameters to add</a>
-        </p>
+        
 
     </main>
 
