--- a/templates/index.html
+++ b/templates/index.html
@@ -67,9 +67,9 @@
                 </div>
             </div>
             <p class="lead"><br></p>
-            <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Run prediction</button>
+            <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white" style="display: inline-block;">Run prediction</button>
             <p class="lead">
-                <a href="/params" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Parameters to add</a>
+                <a href="/params" class="btn btn-lg btn-secondary fw-bold border-white bg-white" style="display: inline-block;">Parameters to add</a>
             </p>
         </form>
         
