--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,9 @@
 
     <main class="px-3">
         <h1>Water Quality.</h1>
+        <button class="lead">
+            <a href="/params" class="btn btn-lg btn-secondary fw-bold border-white bg-white" style="display: inline-block;">Parameters to add</a>
+        </button>
         <p class="lead">Prediction of water quality according to the indicated parameters.</p>
         
         <form action="predict" method="POST" enctype="multipart/form-data">
@@ -68,9 +71,7 @@
             </div>
             <p class="lead"><br></p>
             <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white" style="display: inline-block;">Run prediction</button>
-            <p class="lead">
-                <a href="/params" class="btn btn-lg btn-secondary fw-bold border-white bg-white" style="display: inline-block;">Parameters to add</a>
-            </p>
+            
         </form>
         
 
